# sundry-tools

./: README.md
qt/qml/colorSelect/: ColorSelector.qml
qt/qml/zoomImage/: README.md  ZoomImage.qml  zoomimage.cpp  zoomimage.h
study/learnopengl/: CMakeLists.txt  main.cpp  main.h
study/learnopengl/include/: AbstractCamera.h  AbstractDraw.h  CameraCircle.h  CoordinateSystems.h  CoordinateSystemsDepth.h  TextureContainer.h  Transformations.h  Triangle.h  Triangle2.h
study/learnopengl/include/glad/: glad.h
study/learnopengl/include/util/: Shader.h  Texture.h  utils.h
study/learnopengl/res/shader/: textureContainer.fs
study/learnopengl/src/: AbstractCamera.cpp  AbstractDraw.cpp  CameraCircle.cpp  CoordinateSystems.cpp  CoordinateSystemsDepth.cpp  TextureContainer.cpp  Transformations.cpp  Triangle.cpp  Triangle2.cpp  glad.c
study/learnopengl/src/util/: Shader.cpp  Texture.cpp  stb_image.cpp  utils.cpp
syberh/: syberh-build.py
vpn/: package.json  tsconfig.json
vpn/src/: index.ts
